make light updates more efficient